// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRowHeader renders  header for contributor editor control with delete all disabled 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all items?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className=""
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(ForwardRef(Typography))
        variant="caption"
      >
        Name
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(ForwardRef(Typography))
        variant="caption"
      >
        Reorder items
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove all items"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={true}
          onClick={[Function]}
        >
          <DeleteForeverIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRowHeader renders  header for contributor editor control with name and delete all button only 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all items?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className=""
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(ForwardRef(Typography))
        variant="caption"
      >
        Name
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(ForwardRef(Typography))
        variant="caption"
      >
        Reorder items
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove all items"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          onClick={[Function]}
        >
          <DeleteForeverIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRowHeader renders  should render default view with styles 1`] = `
<ListRowHeader
  classes={
    Object {
      "center": "ListRowHeader-center-2",
      "header": "ListRowHeader-header-3",
      "right": "ListRowHeader-right-1",
    }
  }
  locale={
    Object {
      "deleteAll": "Remove all items",
      "deleteAllConfirmation": Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all items?",
        "confirmationTitle": "Delete all",
      },
      "nameColumn": "Name",
      "reorderColumn": "Reorder items",
    }
  }
  onDeleteAll={[MockFunction]}
/>
`;

exports[`ListRowHeader renders  should render larger grid item 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all items?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className=""
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={11}
      xs={10}
    >
      <WithStyles(ForwardRef(Typography))
        variant="caption"
      >
        Name
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className=""
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove all items"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          onClick={[Function]}
        >
          <DeleteForeverIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
